--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
               <span id = "blue">I</span>
               <span id = "purple">S</span>
             </h1>
+            <button id = "start-button">START</button>
             <h3> Score: <span id="current-score"></span> </h3>
         </div>
 
