show furthest possible place + scoring + levels
Check quickFall()

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
               <span id = "purple">S</span>
             </h1>
             <button id = "start-button">START</button>
-            <h3> Score: <span id="current-score"></span></h3>
+            <h4> Score: <span id="current-score"></span></h4>
+            <h4> Level: <span id="current-level"></span></h4>
+            <h4> Lines: <span id="current-lines"></span></h4>
         </div>
 
         <div id = "game-area">
