Down arrow speeds fall

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </div>
 
         <div id = "game-area">
-            <div id="hold-tile">
+            <!-- <div id="hold-tile">
                 <p>Hold:</p>
-            </div>
+            </div> -->
             <div id="next-tile">
                 <p>Next tile:</p>
             </div>
