--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link href="http://fonts.cdnfonts.com/css/tetris" rel="stylesheet" />
+    <style>
+      @import url('http://fonts.cdnfonts.com/css/tetris');
+    </style>
     <title>Tetris</title>
   </head>
   <body>
