--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </div>
 
         <div id = "game-area">
-            <!-- <div id="hold-tile">
-                <p>Hold:</p>
-            </div> -->
+            <div id="hold-tile">
+                <!-- <p>Hold:</p> -->
+            </div>
             <div id="next-tile">
                 <p>Next tile:</p>
             </div>
